--- a/openrndr-gl3-natives-linux-x64/build.gradle
+++ b/openrndr-gl3-natives-linux-x64/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     runtime "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
     runtime "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
     runtime "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
+    runtime "org.lwjgl:lwjgl-openvr:$lwjglVersion:$lwjglNatives"
 }
