--- a/openrndr-gl3-natives-macos/build.gradle
+++ b/openrndr-gl3-natives-macos/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     runtime "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
     runtime "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
     runtime "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
+//    no macos support for openvr
+//    runtime "org.lwjgl:lwjgl-openvr:$lwjglVersion:$lwjglNatives"
 }
